--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,48 @@
-camelot_py==0.9.0
+gunicorn==20.1.0
+async-generator==1.10
+attrs==21.4.0
+bcrypt==3.2.2
+camelot-py==0.9.0
+certifi==2022.6.15
+cffi==1.15.1
+chardet==5.0.0
+charset-normalizer==2.0.12
+click==8.1.3
+cryptography==37.0.4
+et-xmlfile==1.1.0
 Flask==2.1.2
-flask_bcrypt==1.0.1
-flask_login==0.6.1
-flask_sqlalchemy==2.5.1
-flask_wtf==1.0.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+greenlet==1.1.2
+h11==0.13.0
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 numpy==1.22.4
 openpyxl==3.0.10
+outcome==1.2.0
 pandas==1.4.2
+pdfminer.six==20220524
+psycopg2-binary==2.9.3
+pycparser==2.21
+pyOpenSSL==22.0.0
+PyPDF2==2.4.2
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2022.1
 requests==2.28.0
 selenium==4.3.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+SQLAlchemy==1.4.39
+trio==0.21.0
+trio-websocket==0.9.2
+urllib3==1.26.10
 Werkzeug==2.1.2
+wsproto==1.1.0
 WTForms==3.0.1
+
